syntax = "proto3";
package playercomp;

message SceneInfo
{
	uint64 scene_id = 1;
}
